# fm-bindings

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: tests.yml
examples/: response.rs  stream_response.rs
src/: error.rs  ffi.rs  lib.rs  session.rs
swift/: FoundationModelsFFI.swift
tests/: integration_test.rs
